[package]
name = "connect_four"
version = "0.1.0"
authors = ["bengd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.2", default-features = false, features = ["cache", "client", "builder", "gateway", "http", "rustls_backend", "model", "collector"] }
tokio = { version = "0.2", features = ["macros"] }
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
rand = "0.7.3"
itertools = "0.9.0"
smallvec = "1.5"